Complete + fix java 17